fix: Make footer info align to sides
The footer info was aligned somewhat in the middle of the screen as if it were
still the old layout, now they properly align to the sides.

--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@
 
 /*Containers */
 * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
 }
@@ -130,6 +128,10 @@ footer {
 .udacity {
   text-align: right;
   float: right;
+}
+
+.copyright {
+    width: 100% !important;
 }
 
 
